FondamentiDeiLinguaggiDiProgrammazione/target/generated-sources/antlr4/assemblerAntlr/AssemblerParser.java
// Generated from Assembler.g4 by ANTLR 4.4
package assemblerAntlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AssemblerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__8=1, T__7=2, T__6=3, T__5=4, T__4=5, T__3=6, T__2=7, T__1=8, T__0=9, 
		ARITHMETIC=10, COMPARISON=11, INTEGER_UNARY_OPERATION=12, GLOBAL=13, MEMORY_OPERATION=14, 
		CONDITIONAL=15, UNCONDITIONAL=16, CALL=17, RETURN=18, STREAM=19, EXIT=20, 
		REG=21, ID=22, FUNC=23, INT=24, CHAR=25, STRING=26, FLOAT=27, WS=28, NEWLINE=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'.def'", "'.globals'", "'args'", "'f'", "'i'", "':'", "','", 
		"'locals'", "'='", "ARITHMETIC", "COMPARISON", "INTEGER_UNARY_OPERATION", 
		"'g'", "MEMORY_OPERATION", "'br'", "UNCONDITIONAL", "CALL", "'ret'", "'print'", 
		"'halt'", "REG", "ID", "FUNC", "INT", "CHAR", "STRING", "FLOAT", "WS", 
		"NEWLINE"
	};
	public static final int
		RULE_program = 0, RULE_globals = 1, RULE_functionDeclaration = 2, RULE_instruction = 3, 
		RULE_stackBynaryOperator = 4, RULE_integerBynaryOperation = 5, RULE_floatBynaryOperation = 6, 
		RULE_stackUnary = 7, RULE_memoryStackOperation = 8, RULE_branch = 9, RULE_funcionOperation = 10, 
		RULE_systemCall = 11, RULE_label = 12;
	public static final String[] ruleNames = {
		"program", "globals", "functionDeclaration", "instruction", "stackBynaryOperator", 
		"integerBynaryOperation", "floatBynaryOperation", "stackUnary", "memoryStackOperation", 
		"branch", "funcionOperation", "systemCall", "label"
	};

	@Override
	public String getGrammarFileName() { return "Assembler.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AssemblerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public TerminalNode WS() { return getToken(AssemblerParser.WS, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(AssemblerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AssemblerParser.NEWLINE, i);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public GlobalsContext globals() {
			return getRuleContext(GlobalsContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(26); globals();
				}
			}

			setState(29); match(WS);
			setState(34); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(34);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(30); functionDeclaration();
					}
					break;
				case T__5:
				case T__4:
				case INTEGER_UNARY_OPERATION:
				case GLOBAL:
				case MEMORY_OPERATION:
				case CONDITIONAL:
				case UNCONDITIONAL:
				case CALL:
				case RETURN:
				case STREAM:
				case EXIT:
					{
					setState(31); instruction();
					}
					break;
				case ID:
					{
					setState(32); label();
					}
					break;
				case NEWLINE:
					{
					setState(33); match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__5) | (1L << T__4) | (1L << INTEGER_UNARY_OPERATION) | (1L << GLOBAL) | (1L << MEMORY_OPERATION) | (1L << CONDITIONAL) | (1L << UNCONDITIONAL) | (1L << CALL) | (1L << RETURN) | (1L << STREAM) | (1L << EXIT) | (1L << ID) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(AssemblerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AssemblerParser.NEWLINE, i);
		}
		public TerminalNode INT() { return getToken(AssemblerParser.INT, 0); }
		public GlobalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterGlobals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitGlobals(this);
		}
	}

	public final GlobalsContext globals() throws RecognitionException {
		GlobalsContext _localctx = new GlobalsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(38); match(NEWLINE);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44); match(T__7);
			setState(45); match(INT);
			setState(46); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(AssemblerParser.INT, i);
		}
		public TerminalNode ID() { return getToken(AssemblerParser.ID, 0); }
		public TerminalNode WS(int i) {
			return getToken(AssemblerParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(AssemblerParser.WS); }
		public TerminalNode NEWLINE() { return getToken(AssemblerParser.NEWLINE, 0); }
		public List<TerminalNode> INT() { return getTokens(AssemblerParser.INT); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(T__8);
			setState(49); match(WS);
			setState(50); match(ID);
			setState(51); match(WS);
			setState(52); match(T__3);
			setState(53); match(WS);
			setState(54); match(T__6);
			setState(55); match(WS);
			setState(56); match(T__0);
			setState(57); match(WS);
			setState(58); match(INT);
			setState(59); match(WS);
			setState(60); match(T__2);
			setState(61); match(WS);
			setState(62); match(T__1);
			setState(63); match(WS);
			setState(64); match(T__0);
			setState(65); match(WS);
			setState(66); match(INT);
			setState(67); match(WS);
			setState(68); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public StackBynaryOperatorContext stackBynaryOperator() {
			return getRuleContext(StackBynaryOperatorContext.class,0);
		}
		public SystemCallContext systemCall() {
			return getRuleContext(SystemCallContext.class,0);
		}
		public MemoryStackOperationContext memoryStackOperation() {
			return getRuleContext(MemoryStackOperationContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(AssemblerParser.NEWLINE, 0); }
		public FuncionOperationContext funcionOperation() {
			return getRuleContext(FuncionOperationContext.class,0);
		}
		public StackUnaryContext stackUnary() {
			return getRuleContext(StackUnaryContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			switch (_input.LA(1)) {
			case T__5:
			case T__4:
				{
				setState(70); stackBynaryOperator();
				}
				break;
			case INTEGER_UNARY_OPERATION:
				{
				setState(71); stackUnary();
				}
				break;
			case GLOBAL:
			case MEMORY_OPERATION:
				{
				setState(72); memoryStackOperation();
				}
				break;
			case CONDITIONAL:
			case UNCONDITIONAL:
				{
				setState(73); branch();
				}
				break;
			case CALL:
			case RETURN:
				{
				setState(74); funcionOperation();
				}
				break;
			case STREAM:
			case EXIT:
				{
				setState(75); systemCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(78); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StackBynaryOperatorContext extends ParserRuleContext {
		public IntegerBynaryOperationContext integerBynaryOperation() {
			return getRuleContext(IntegerBynaryOperationContext.class,0);
		}
		public FloatBynaryOperationContext floatBynaryOperation() {
			return getRuleContext(FloatBynaryOperationContext.class,0);
		}
		public StackBynaryOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stackBynaryOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterStackBynaryOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitStackBynaryOperator(this);
		}
	}

	public final StackBynaryOperatorContext stackBynaryOperator() throws RecognitionException {
		StackBynaryOperatorContext _localctx = new StackBynaryOperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stackBynaryOperator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			switch (_input.LA(1)) {
			case T__4:
				{
				setState(80); integerBynaryOperation();
				}
				break;
			case T__5:
				{
				setState(81); floatBynaryOperation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerBynaryOperationContext extends ParserRuleContext {
		public TerminalNode ARITHMETIC() { return getToken(AssemblerParser.ARITHMETIC, 0); }
		public TerminalNode COMPARISON() { return getToken(AssemblerParser.COMPARISON, 0); }
		public IntegerBynaryOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerBynaryOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterIntegerBynaryOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitIntegerBynaryOperation(this);
		}
	}

	public final IntegerBynaryOperationContext integerBynaryOperation() throws RecognitionException {
		IntegerBynaryOperationContext _localctx = new IntegerBynaryOperationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_integerBynaryOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(T__4);
			setState(85);
			_la = _input.LA(1);
			if ( !(_la==ARITHMETIC || _la==COMPARISON) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatBynaryOperationContext extends ParserRuleContext {
		public TerminalNode ARITHMETIC() { return getToken(AssemblerParser.ARITHMETIC, 0); }
		public TerminalNode COMPARISON() { return getToken(AssemblerParser.COMPARISON, 0); }
		public FloatBynaryOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatBynaryOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterFloatBynaryOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitFloatBynaryOperation(this);
		}
	}

	public final FloatBynaryOperationContext floatBynaryOperation() throws RecognitionException {
		FloatBynaryOperationContext _localctx = new FloatBynaryOperationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_floatBynaryOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(T__5);
			setState(88);
			_la = _input.LA(1);
			if ( !(_la==ARITHMETIC || _la==COMPARISON) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StackUnaryContext extends ParserRuleContext {
		public TerminalNode INTEGER_UNARY_OPERATION() { return getToken(AssemblerParser.INTEGER_UNARY_OPERATION, 0); }
		public StackUnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stackUnary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterStackUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitStackUnary(this);
		}
	}

	public final StackUnaryContext stackUnary() throws RecognitionException {
		StackUnaryContext _localctx = new StackUnaryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stackUnary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(90); match(INTEGER_UNARY_OPERATION);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemoryStackOperationContext extends ParserRuleContext {
		public TerminalNode MEMORY_OPERATION() { return getToken(AssemblerParser.MEMORY_OPERATION, 0); }
		public TerminalNode GLOBAL() { return getToken(AssemblerParser.GLOBAL, 0); }
		public MemoryStackOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memoryStackOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterMemoryStackOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitMemoryStackOperation(this);
		}
	}

	public final MemoryStackOperationContext memoryStackOperation() throws RecognitionException {
		MemoryStackOperationContext _localctx = new MemoryStackOperationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_memoryStackOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(92); match(GLOBAL);
				}
			}

			setState(95); match(MEMORY_OPERATION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BranchContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AssemblerParser.ID, 0); }
		public TerminalNode CONDITIONAL() { return getToken(AssemblerParser.CONDITIONAL, 0); }
		public TerminalNode WS() { return getToken(AssemblerParser.WS, 0); }
		public TerminalNode UNCONDITIONAL() { return getToken(AssemblerParser.UNCONDITIONAL, 0); }
		public BranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitBranch(this);
		}
	}

	public final BranchContext branch() throws RecognitionException {
		BranchContext _localctx = new BranchContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_branch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==CONDITIONAL || _la==UNCONDITIONAL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(98); match(WS);
			setState(99); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionOperationContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(AssemblerParser.RETURN, 0); }
		public TerminalNode CALL() { return getToken(AssemblerParser.CALL, 0); }
		public FuncionOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterFuncionOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitFuncionOperation(this);
		}
	}

	public final FuncionOperationContext funcionOperation() throws RecognitionException {
		FuncionOperationContext _localctx = new FuncionOperationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_funcionOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !(_la==CALL || _la==RETURN) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemCallContext extends ParserRuleContext {
		public TerminalNode STREAM() { return getToken(AssemblerParser.STREAM, 0); }
		public TerminalNode EXIT() { return getToken(AssemblerParser.EXIT, 0); }
		public SystemCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterSystemCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitSystemCall(this);
		}
	}

	public final SystemCallContext systemCall() throws RecognitionException {
		SystemCallContext _localctx = new SystemCallContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_systemCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !(_la==STREAM || _la==EXIT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AssemblerParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssemblerListener ) ((AssemblerListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(ID);
			setState(106); match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}